<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="E_LoggingSeverity" Id="{b43a5778-63d8-4d4a-9e8a-b310bbd7a393}">
    <Declaration><![CDATA[TYPE E_LoggingSeverity :
(
	eNO_LOGGING := 0,
	eINFO,
	eWARNING,
	eDEBUG,
	eERROR,
	eALL
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>